Fixed the layout issue

--- a/src/components/AddFriend/AddFriend.module.css
+++ b/src/components/AddFriend/AddFriend.module.css
@@ -1,10 +1,13 @@
+
 .inputcontainer{
-  display: flex;
-  justify-content: center;
+  width: 95%;
+  display: block;
+  /* margin: auto; */
+  margin-top: 5px;
 }
 
 .input{
-  flex: 1;
+  width: 100%;
   margin: 5px;
   outline: none;
   border: 1px solid#494949;
@@ -13,7 +16,6 @@
   border-radius: 5px;
   background-color: #141414;
   color: rgb(182, 182, 182);
-  transition: border 0.2s ease-in;
 }
 
 .input:focus{
@@ -116,5 +118,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 34px;
+  font-size: 20px;
 }
