--- a/src/components/GroupChat/GroupChat.module.css
+++ b/src/components/GroupChat/GroupChat.module.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   font-family: "Fira Code";
   min-height: 200px;
-  position: relative;
+  /* position: relative; */
   background-color: rgb(20, 20, 20);
 }
 
