--- a/src/components/Notifications/Notifications.module.css
+++ b/src/components/Notifications/Notifications.module.css
@@ -1,6 +1,5 @@
 .notifications {
   position: absolute;
-  height: 100vh;
   right: 0px;
   width: 250px;
   overflow-y: auto;
